--- a/Mouseover/Mouseover.html
+++ b/Mouseover/Mouseover.html
@@ -32,7 +32,7 @@
 
             function mouseOut() {
 
-              document.getElementById("img").src="parrot.jpg";
+              document.getElementById("img").src="parrot.jpeg";
 
               document.getElementById("heading").innerHTML = "Parrot";
 
